<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarIncluded"
        layout="@layout/toolbar_with_back_icon" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarIncluded">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rangeFromTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/search_settings_search_year_range_from_text"
                android:textAppearance="@style/SearchSettingsParametersGreyTextStyle" />

            <include
                android:id="@+id/tableRangeFrom"
                layout="@layout/range_table_block"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rangeToTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/search_settings_search_year_range_to_text"
                android:textAppearance="@style/SearchSettingsParametersGreyTextStyle" />


            <include
                android:id="@+id/tableRangeTo"
                layout="@layout/range_table_block"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginVertical="24dp"
                android:layout_gravity="bottom|center"
                android:paddingVertical="0dp"
                android:text="@string/search_settings_select_button_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>